Fixed some broken newsletter popup layout issue.

--- a/www/styles/dialog.less
+++ b/www/styles/dialog.less
@@ -552,7 +552,7 @@ div.popup-container {
   &.newsletter-popup-container {
     transform: translateY(-8px) translateX(26px);
     z-index: 22;
-    right: 400px;
+    right: 64px;
     width: 600px;
     bottom: 50px;
 
